--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,9 @@
 .App {
   text-align: center;
 }
+
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
+  letter-spacing: 5px;
+}
