--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -7,3 +7,14 @@ body {
   text-align: center;
   letter-spacing: 5px;
 }
+
+.products {
+  background-color: gray;
+  width: 500px;
+  height: 150px;
+  padding: 20px;
+  margin-bottom: 20px;
+  margin: 0 auto;
+  margin-top: 30px;
+  box-shadow: 0 4px 8px 0 #eee;
+}
