--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -18,3 +18,13 @@ body {
   margin-top: 30px;
   box-shadow: 0 4px 8px 0 #eee;
 }
+
+.button__group {
+  padding: 2rem;
+  margin: 0 auto;
+}
+
+.btn {
+  padding: 1rem;
+  margin: 2rem;
+}
