--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -12,10 +12,10 @@ body {
   background-color: gray;
   width: 500px;
   height: 150px;
-  padding: 20px;
-  margin-bottom: 20px;
+  padding: 12px 20px;
+  margin-bottom: 50px;
   margin: 0 auto;
-  margin-top: 30px;
+  margin-top: 90px;
   box-shadow: 0 4px 8px 0 #eee;
 }
 
