--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -35,3 +35,11 @@ body {
   padding: 5px;
   width: 15%;
 }
+
+.product__img {
+  width: 50%;
+  height: auto;
+  padding: 2rem;
+  display: block;
+  margin-left: 40rem;
+}
