--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -5,18 +5,18 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
   text-align: center;
-  letter-spacing: 5px;
+  letter-spacing: 1px;
 }
 
 .products {
   background-color: lightblue;
-  width: 500px;
-  height: 150px;
+  width: 800px;
+  height: 500px;
   color: black;
-  padding: 12px 20px;
+  padding: 14px 22px;
   margin-bottom: 50px;
   margin: 0 auto;
-  margin-top: 90px;
+  margin-top: 150px;
   box-shadow: 0 4px 8px 0 #eee;
 }
 
@@ -37,9 +37,10 @@ body {
 }
 
 .product__img {
-  width: 50%;
-  height: auto;
+  width: 25%;
+  height: 50%;
   padding: 2rem;
   display: block;
-  margin-left: 40rem;
+  margin-left: 18rem;
+  margin-bottom: -60rem;
 }
