--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -44,3 +44,13 @@ body {
   margin-left: 18rem;
   margin-bottom: -60rem;
 }
+
+.register__txt {
+  text-align: center;
+}
+
+.purchase__btn {
+  padding: 20px;
+  width: 20%;
+  font-size: 10px;
+}
