--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -54,3 +54,15 @@ body {
   width: 20%;
   font-size: 22px;
 }
+
+.orders {
+  background-color: lightblue;
+  width: 800px;
+  height: 500px;
+  color: black;
+  padding: 14px 22px;
+  margin-bottom: 30px;
+  margin: 0 auto;
+  margin-top: 150px;
+  box-shadow: 0 4px 8px 0 #eee;
+}
